# momics-demos

./: .gitignore  LICENSE  Makefile  README.md  hvplot_explorer.ipynb  pyproject.toml  pytest.ini  requirements.txt  tox.ini  utils.py
.github/workflows/: test.yml  test_deploy.yml  update-parquet-files.yml
assets/: ssu_head.csv
biodata/: biodata_solutions.ipynb
data/: VRE_Datasets_non_emobon.csv  mgnify_metadata.parquet  shipment_b1b2_39_discarded.csv  summary_detected_BGC.tsv
data/emo-bon_data/: README.md  metagoflow_analyses.LSU.parquet  metagoflow_analyses.SSU.parquet  metagoflow_analyses.go.parquet  metagoflow_analyses.go_slim.parquet  metagoflow_analyses.ips.parquet  metagoflow_analyses.ko.parquet  metagoflow_analyses.pfam.parquet
data/parquet_files/: Observatory_combined_logsheets_validated.csv  metagoflow_analyses.LSU.parquet  metagoflow_analyses.go_slim.parquet  metagoflow_analyses.ips.parquet  metagoflow_analyses.pfam.parquet
diversity/: diversities_panel.ipynb  run_alpha_diversity_DP.ipynb  run_beta_diversity_DP.ipynb
gene_clusters/: bgc_analyze_gecco.ipynb  bgc_run_gecco_job.ipynb
old_nbs/: run_alpha_diversity_DP.ipynb  run_beta_diversity-Copy1.ipynb  run_beta_diversity.ipynb
other_data/: bcodmo_dataset_748064_712b_5843_9069.csv
parquet_files/: Batch1and2_combined_logsheets_2024-09-11.csv  metagoflow_analyses.SSU.parquet  metagoflow_analyses.go.parquet  metagoflow_analyses.ko.parquet
scripts/: combine_mgf_metadata.py  combine_mgf_results.py  filter_shipment_data.py  pull_emobon_sequencing_data.py
templates/: README.md  __init__.py  data_filter_tab.py
test/: test_notebooks.py  test_parquets.py  test_taxonomy.py
testing/: run_GECCO_in_Galaxy.ipynb  test_diversity_plots.ipynb
testing/tpc_gen_benchmark/: benchmark_dfs.ipynb  common_utils.py  plot_bars.py  settings.py  utils_fireducks.py  utils_pandas.py  utils_polars.py
wf0_landing_page/: emobon_sequencing_master.csv  landing_page.ipynb  landing_page_interactive.ipynb  landing_page_sandbox.ipynb  min_merged.csv  pull_emobon_sequencing_data.py  pull_seq_efforts.py
wf0_metagoflow/: quality_control.ipynb  ro-crate_link_queries_test.py
wf1_metagoflow/: quality_control.ipynb  quality_control_interactive.ipynb  quality_control_test.ipynb  ro-crate_link_queries_test01.py  ro-crate_link_queries_test02.py
wf2_diversity/: .diversities_panel.ipynb.layout  diversities_panel.ipynb  diversities_panel_advanced.ipynb  diversities_panel_advanced_interactive.ipynb  diversities_panel_interactive.ipynb  tax_finder.ipynb  tax_finder_interactive.ipynb
wf2_diversity/templates/: README.md  __init__.py  data_filter_tab.py  udal_filter_tab.py
wf3_gene_clusters/: bgc_analyze_gecco.ipynb  bgc_analyze_gecco_single.ipynb  bgc_analyze_gecco_single_interactive.ipynb  bgc_analyze_gecco_single_pfam_calls.ipynb  bgc_run_gecco_job.ipynb  bgc_run_gecco_job_interactive.ipynb  pfam_dict_abundance_cutoff_100.pkl
wf4_co-occurrence/: parametrized_taxonomy.ipynb  parametrized_taxonomy_interactive.ipynb
wf5_MGnify/: 01_final_dashboard.ipynb  01_panel_parts.ipynb  01_query_data.ipynb  01_query_data_dp.ipynb  01_summary_analysis_panel_wip.ipynb  02_comparative_taxonomy.ipynb  02_comparative_taxonomy_metadata.ipynb  02_hello.nf  02_nextflow_mgnify_galaxy.ipynb  Listeria_resources.parquet  funcscan_input.csv  latest_genome_resources.parquet  query_data.ipynb  rnaseq_input.csv  script1.nf
wfs_extra/: 01_fuseki_create_sparql_endpoint.ipynb  01_fuseki_emobon_full.ipynb  02_fuseki_emobon_queries.ipynb  03_fuseki_emobon_GH.ipynb  EMOBON_AAOT_Wa_66-ro-crate_SSU-taxonomy-summary.ttl  EMOBON_AAOT_Wa_67-ro-crate_SSU-taxonomy-summary.ttl  EMOBON_HCMR-1_Wa_6-ro-crate_SSU-taxonomy-summary.ttl  EMOBON_OSD74_Wa_21-ro-crate_SSU-taxonomy-summary.ttl  combined_emobon_rocrates.ttl  emobon_bpns_so_34.ttl  pathogen_taxonomy.ipynb  ro-crate_sparql_endpoint.ipynb
wfs_extra/co-occurrence/: ssu_v1.ipynb
wfs_extra/mgnify/: 01_mgnify_rarefaction_test.ipynb  02_mgnify_rarefaction.ipynb  03_mgnify_rarefaction_fast.ipynb  04_mgnify_rarefaction_bacteria_multiple_studies.ipynb  README.md
wfs_extra/mgnify/analysis_cache/: MGYS00006608_analysis_meta.csv  MGYS00006608_samples_meta.csv  MGYS00006680_analysis_meta.csv  MGYS00006680_samples_meta.csv  rarefaction_curves_prokaryotes_per_season.pkl  rarefaction_curves_prokaryotes_per_taxon.pkl
wfs_extra/scripts/mgnify/: __init__.py  mgnify_oop.py  mgnify_rarefaction.py  mgnify_utils.py  test_mgnify_oop.ipynb
wfs_extra/scripts/mgnify/tables/: __init__.py  tables.py  taxonomy_table.py
wfs_extra/scripts/mgnify/tables/sources/: converters.py  detectors.py  handlers.py  validators.py
